--- a/cms/src/main/webapp/login.xhtml
+++ b/cms/src/main/webapp/login.xhtml
@@ -2,24 +2,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
+        <link rel="stylesheet" href="/resources/css/bootstrap.min.css" />
         <title>易度门后台管理</title>
     </h:head>
     <h:body>
-        <h:form>
-            <p:panel header="易度门内容管理系统">
+        <h:form styleClass="form-inline">
+            <div class="panel panel-primary">
+                <div class="panel-heading">易度门内容管理平台</div>
                 <h:panelGrid columns="2">
-                    <h:outputLabel for="username" value="用户名：" />
-                    <p:inputText id="username" value="#{login.user.username}" />
-                    <h:outputLabel for="password" value="密 码：" />
-                    <p:password id="password" value="#{login.user.password}" />
+                    <h:outputLabel styleClass="control-label" for="username" value="用户名：" />
+                    <h:inputText id="username" styleClass="form-control" value="#{login.user.username}" />
+                    <h:outputLabel styleClass="control-label" for="password" value="密 码：" />
+                    <h:inputSecret id="password" styleClass="form-control" value="#{login.user.password}" />
+                    <f:facet name="footer">
+                        <h:commandButton styleClass="btn btn-primary" value="登 录" action="#{login.login()}" />
+                    </f:facet>
                 </h:panelGrid>
-                <f:facet name="footer">
-                    <p:commandButton value="登 录" action="#{login.login()}" />
-                </f:facet>
-            </p:panel>
+            </div>
         </h:form>
     </h:body>
 </html>
