--- a/cms/src/main/webapp/content/video-manager.xhtml
+++ b/cms/src/main/webapp/content/video-manager.xhtml
@@ -60,7 +60,7 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">荐</f:facet>
-                            <input type="checkbox" value="#{item.recommend}" disabled="true" />
+                            <h:selectBooleanCheckbox value="#{item.recommend}" disabled="true" />
                         </h:column>
                         <h:column>
                             <f:facet name="header">状态</f:facet>
@@ -73,11 +73,14 @@
                                                title="#{item.title}-详细"
                                                p:data-toggle="modal" p:data-target="#amodal">
                                     <f:setPropertyActionListener value="#{item}" target="#{video.video}" />
+                                    <f:setPropertyActionListener value="false" target="#{video.editable}" />
                                     <f:ajax render=":detail" />
                                 </h:commandLink>
                                 <h:commandLink styleClass="ui-icon ui-icon-pencil pull-left"
-                                               title="编辑-#{item.title}">
+                                               title="编辑-#{item.title}"
+                                               p:data-toggle="modal" p:data-target="#amodal">
                                     <f:setPropertyActionListener value="#{item}" target="#{video.video}" />
+                                    <f:setPropertyActionListener value="true" target="#{video.editable}" />
                                     <f:ajax render=":detail" />
                                 </h:commandLink>
                                 <h:commandLink styleClass="ui-icon ui-icon-trash pull-right" />
@@ -132,74 +135,164 @@
                 </h:form>
                 <div id="amodal" class="modal">
                     <div class="modal-dialog">
-                        <h:panelGroup id="detail" styleClass="modal-content" layout="block">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                <h:outputText styleClass="modal-title h4" value="#{video.video.title}" />
-                            </div>
-                            <div class="modal-body">
-                                <h:panelGrid columns="6" style="width: 100%"
-                                             columnClasses="text-muted, text-info,text-muted, text-info,text-muted, text-info">
-
-                                    <h:outputLabel value="ID：" for="itemId" />
-                                    <h:outputText id="itemId" value="#{video.video.id}" />
-
-                                    <h:outputLabel value="文件编号：" for="file" />
-                                    <h:outputText id="file" value="#{video.video.file}" />
-
-
-                                    <h:outputLabel value="排序编号：" for="sort" />
-                                    <h:outputText id="sort" value="#{video.video.sort==0?'-':video.video.sort}" rendered="#{not video.editable}" />
-                                    <h:inputText id="sort" value="#{video.video.sort}" rendered="#{video.editable}" />
-
-                                    <h:outputLabel value="播放时长：" for="dur" />
-                                    <h:outputText id="dur" value="#{video.video.duration}" />
-
-                                    <h:outputLabel value="所属栏目：" for="type" />
-                                    <h:outputText id="type" value="#{video.video.chatroomVideo?'聊天室':'其它'}" rendered="#{not video.editable}" />
-                                    <h:selectOneRadio id="type" value="#{video.video.chatroomVideo}" rendered="#{video.editable}">
-                                        <f:selectItem itemLabel="聊天室" itemValue="true" />
-                                        <f:selectItem itemLabel="其它栏目" itemValue="false" />
-                                    </h:selectOneRadio>
-
-                                    <h:outputLabel value="拍摄日期：" for="shoot" />
-                                    <h:outputText id="shoot" value="#{video.video.shootTime}" rendered="#{not video.editable}" />
-                                    <div class="input-append date" id="datetimepicker" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-                                        <h:inputText id="shoot" value="#{video.video.shootTime}" rendered="#{video.editable}" />
+                        <h:form styleClass="form-horizontal" prependId="false" role="form">
+                            <h:panelGroup id="detail" styleClass="modal-content" layout="block">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                    <h:outputText styleClass="modal-title h4" value="#{video.video.title}" />
+                                </div>
+                                <div class="modal-body">
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="ID：" />
+                                        <div class="col-sm-5">
+                                            <p id="itemId" class="text-muted form-control-static">#{video.video.id}</p>
+                                        </div>
                                     </div>
 
-                                    <h:outputLabel value="当前状态：" for="status" />
-                                    <h:outputText id="status" value="#{video.video.status.descript}" />
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="文件编号：" />
+                                        <div class="col-sm-5">
+                                            <p id="file" class="text-muted form-control-static"> #{video.video.file}</p>
+                                        </div>
+                                    </div>
 
-                                    <h:outputLabel value="是否推荐：" for="recommend" />
-                                    <h:outputText id="recommend" value="#{video.video.recommend?'是':'否'}" />
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="播放时长：" />
+                                        <div class="col-sm-5">
+                                            <p id="dur" class="text-muted form-control-static">#{video.video.duration}</p>
+                                        </div>
+                                    </div>
 
-                                    <h:outputLabel value="发布时间：" for="pub" />
-                                    <h:outputText id="pub" value="#{video.video.pubDate}">
-                                        <f:convertDateTime type="time" pattern="yyyy-mm-dd hh:MM:ss" />
-                                    </h:outputText>
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="当前状态：" />
+                                        <div class="col-sm-5">
+                                            <p class="text-muted form-control-static">#{video.video.status.descript}</p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="排序编号：" />
+                                        <div class="col-sm-5">
+                                            <h:outputText styleClass="text-muted form-control-static"
+                                                          value="#{video.video.sort==0?'-':video.video.sort}" rendered="#{not video.editable}" />
+                                            <h:inputText styleClass="form-control" value="#{video.video.sort}" rendered="#{video.editable}" />
+                                        </div>
+                                    </div>
 
-                                    <f:facet name="footer">
-                                        <h:outputLabel value="视频描述：" for="desc" />
-                                        <h:outputText id="desc" value="#{video.video.descrpition}" />
-                                        <dl>
-                                            <dt class="h5">文件大小</dt>
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="所属栏目：" />
+                                        <div class="col-sm-5">
+                                            <h:outputText styleClass="text-muted form-control-static"
+                                                          value="#{video.video.chatroomVideo?'聊天室':'其它'}" rendered="#{not video.editable}" />
+                                            <h:selectOneMenu  styleClass="form-control input-sm"
+                                                              value="#{video.video.chatroomVideo}" rendered="#{video.editable}">
+                                                <f:selectItem itemLabel="聊天室" itemValue="true" />
+                                                <f:selectItem itemLabel="其它栏目" itemValue="false" />
+                                            </h:selectOneMenu>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="拍摄日期：" />
+                                        <div class="col-sm-5">
+                                            <h:outputText styleClass="text-muted" value="#{video.video.shootTime}" rendered="#{not video.editable}" />
+                                            <h:inputText styleClass="form-control date date_shoot" value="#{video.video.shootTime}" rendered="#{video.editable}">
+                                                <f:converter converterId="sqlDate" />
+                                            </h:inputText>
+                                            <h:outputScript  rendered="#{video.editable}">
+                                                $(".date_shoot").datetimepicker({
+                                                language: "zh-CN",
+                                                format: "yyyy-mm-dd",
+                                                weekStart: 1,
+                                                autoclose: true,
+                                                startView: 2,
+                                                minView: 2,
+                                                todayBtn: "linked",
+                                                todayHighlight: true,
+                                                forceParse: false
+                                                });
+                                            </h:outputScript>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="是否推荐：" />
+                                        <div class="col-sm-5">
+                                            <h:outputText styleClass="text-muted" value="#{video.video.recommend?'是':'否'}" rendered="#{not video.editable}" />
+                                            <h:selectBooleanCheckbox styleClass="checkbox input-sm" value="#{video.video.recommend}" rendered="#{video.editable}" />
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="发布时间：" />
+                                        <div class="col-sm-5">
+                                            <h:outputText styleClass="text-muted" value="#{video.video.pubDate}" rendered="#{not video.editable}">
+                                                <f:convertDateTime type="both" pattern="yyyy-MM-dd hh:mm:ss" />
+                                            </h:outputText>
+                                            <h:inputText styleClass="form-control date date_pub" value="#{video.video.pubDate}" rendered="#{video.editable}">
+                                                <f:converter converterId="sqlDate" />
+                                                <f:attribute name="pattern" value="yyyy-MM-dd hh:mm:ss" />
+                                            </h:inputText>
+                                            <h:outputScript  rendered="#{video.editable}">
+                                                $(".date_pub").datetimepicker({
+                                                    language: "zh-CN",
+                                                    format: "yyyy-mm-dd hh:ii:ss",
+                                                    weekStart: 1,
+                                                    autoclose: true,
+                                                    startView: 2,
+                                                    minView: 0,
+                                                    todayHighlight: true,
+                                                    forceParse: false
+                                                });
+                                            </h:outputScript>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="视频描述：" />
+                                        <div class="col-sm-5">
+                                            <h:outputText styleClass="text-muted" value="#{video.video.descrpition}" rendered="#{not video.editable}" />
+                                            <h:inputTextarea styleClass="col-sm-5 form-control" rows="2" value="#{video.video.descrpition}" rendered="#{video.editable}" />
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <h:outputLabel styleClass="col-sm-3 control-label" value="文件大小：" />
+                                        <div class="col-sm-5 text-muted">
                                             <ui:repeat value="#{video.video.extInfo}" var="info">
-                                                <dd class="text-muted">
-                                                    <h:outputText value="#{info.resolution.descript}：#{info.fileSize}MB" />
-                                                </dd>
+                                                <p class="form-control-static">#{info.resolution.descript} #{info.fileSize}MB</p>
                                             </ui:repeat>
-                                        </dl>
-                                    </f:facet>
-                                </h:panelGrid>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </h:panelGroup><!-- /.modal-content -->
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                                    <h:commandButton styleClass="btn btn-primary" value="保存更改" actionListener="#{video.updateVideo()}" rendered="#{video.editable}">
+                                    </h:commandButton>
+                                </div>
+                            </h:panelGroup><!-- /.modal-content -->
+                        </h:form>
                     </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
+                <div id="bmodal" class="modal">
+                    <div class="modal-dialog modal-sm">
+                        <h:form prependId="false" role="form">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                    <h4 class="text-danger">警告</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <p>删除操作是不可恢复的！</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                    <h:commandButton styleClass="btn btn-warning" value="是的，我确定要删除它" actionListener="#{video.updateVideo()}" rendered="#{video.editable}">
+                                    </h:commandButton>
+                                </div>
+                            </div><!-- /.modal-content -->
+                        </h:form>
+                    </div>
+                </div>
             </ui:define>
             <ui:define name="js">
                 <script type="text/javascript" src="/resources/js/bootstrap-datetimepicker.min.js"></script>
