--- a/web/src/main/webapp/content/goods/book-check.xhtml
+++ b/web/src/main/webapp/content/goods/book-check.xhtml
@@ -31,7 +31,7 @@
                             </dl>
                             <p>请核对以上信息，确认无误后再确认提交。</p>
                             <h:button styleClass="btn btn-default" value="返回修改" outcome="/content/goods/book" />
-                            <h:commandButton styleClass="btn btn-primary" value="提交" action="#{goods.createGoods()}" />
+                            <h:button styleClass="btn btn-primary" value="提交" outcome="/content/goods/book-success" />
                         </div>
                     </div>
                 </h:form>
