--- a/web/src/main/webapp/content/goods/book.xhtml
+++ b/web/src/main/webapp/content/goods/book.xhtml
@@ -2,8 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
     <body>
 
@@ -18,23 +17,24 @@
             </ui:define>
 
             <ui:define name="content">
-                <h:form prependId="false">
+                <pretty:urlbuffer mappingId="book-info" var="formurl" />
+                <form action="#{requestScope.formurl};jsessionid=#{session.id}" role="form">
                     <div class="panel panel-default">
                         <div class="panel-heading panel-title">小说《法界之心》结缘赠阅</div>
                         <div class="panel-body">
                             <div class="form-group">
                                 <label for="name">收件人姓名</label>
-                                <h:inputText id="name" styleClass="form-control" p:placeholder="要投递的收件人姓名" value="#{goods.goods.name}" />
+                                <input id="name" type="text" name="name" class="form-control" placeholder="要投递的收件人姓名" value="#{goods.goods.name}" />
                             </div>
                             <div class="form-group">
                                 <label for="phone">联系电话</label>
-                                <h:inputText id="phone" styleClass="form-control" p:placeholder="快递投送时应使用的电话号码" value="#{goods.goods.phone}" />
+                                <input id="phone" class="form-control" type="text" placeholder="快递投送时应使用的电话号码" name="phone" value="#{goods.goods.phone}" />
                             </div>
                             <div class="form-group">
                                 <label for="address">收件地址</label>
-                                <h:inputText id="address" styleClass="form-control" p:placeholder="要投送到的收货地址" value="#{goods.goods.address}" />
+                                <input id="address" name="address" type="text" class="form-control" placeholder="要投送到的收货地址" value="#{goods.goods.address}" />
                             </div>
-                            <h:commandButton styleClass="btn btn-primary" value="提交" action="/content/goods/book-check" />
+                            <button class="btn btn-primary" type="submit">提交</button>
                         </div>
                         <div class="panel-footer">
                             <ol>
@@ -44,7 +44,7 @@
                             </ol>
                         </div>
                     </div>
-                </h:form>
+                </form>
             </ui:define>
 
         </ui:composition>
