--- a/web/src/main/webapp/content/video/tag.xhtml
+++ b/web/src/main/webapp/content/video/tag.xhtml
@@ -8,7 +8,7 @@
 
         <ui:composition template="/template/master.xhtml">
             <ui:param name="nav" value="3" />
-            <ui:param name="title" value="视频标签" />
+            <ui:param name="title" value="视频分类" />
             <ui:define name="head">
             </ui:define>
 
@@ -20,7 +20,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading">包含内容 #{chatroom.tag.tagname} 的视频</div>
+                            <div class="panel-heading">#{chatroom.tag.tagname}</div>
                             <div class="list-group">
                                 <ui:repeat value="#{chatroom.tag.videos}" var="video">
                                     <ydm:videoListItem styleClass="list-group-item" video="#{video}" />
