--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -15,6 +15,26 @@
             <ui:define name="content">#{chatroom.loadpage()}
                 <div class="row">
                     <div class="col-xs-12">
+                        <div class="panel panel-warning">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="flase" aria-controls="collapseOne">
+                                        你准备用“这一生”做什么？
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel">
+                                <div class="panel-body">
+                                    <p>有人用“这一生”沉迷于财、色、名、食、睡中，及时寻乐，但烦恼，贫穷，衰老，疾病，死亡可能同时伴随着他。</p>
+                                    <p>有人制定了几个人生目标，锲而不舍地奋斗着，跌倒了爬起来，失败了重新来过。苦中有乐，尝尽人间百味，终于成功时，鲜花、掌声、拥有的一切都不重要了，因一路付出太多。唯一自豪处是经过的历程。而此时，疾病，死亡或许已不期而至。</p>
+                                    <p>有人一出生就拥有太多。但不管外在物质是多么富有，多么高贵，内心的精神财富是需要自己日积月累从生活中获取的，否则，外在的金缕玉衣，名车豪宅，掩饰不了内在的贫穷。也有太多太多的精神需求无法直接用名利获得，比如爱情、尊重。</p>
+                                    <p>但也有少数人，在生命的长河中忽然驻足，努力想看清生命的意义和真相，究竟用这一生来做什么才是最有价值的？</p>
+                                    <p>两千六百年前，有一个人选择了用这一生去寻找，从“生老病死”中解脱的方法，他成功了。他发现了万物的源头，彻悟了所有生命存在的真相。当我们的心回归到本源时，生命是最有意义的，是活的最有价值的。</p>
+                                    <p>这个人还告诉我们，每一个人只需按他提供的途径走，都可以回归。都可以获得生命的大自在。这就是佛法，这个人就是释迦牟尼佛。</p>
+                                    <p>你可以不是佛教徒，但并不影响你了解、学习释迦牟尼佛的智慧，走进佛法，领略其历经几千年恒久不衰的魅力……</p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="well well-sm">
                             <div class="media">
                                 <img class="pull-left media-object" height="96" alt="杨宁老师" src="http://yimg.yidumen.com/yidumen/mobile/images/yangning.jpg" />
